--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
     "gulp-minify-html": "^1.0.2",
     "gulp-modernizr": "^1.0.0-alpha",
     "gulp-notify": "^2.2.0",
+    "gulp-nunjucks-html": "^1.2.2",
     "gulp-plumber": "^1.0.1",
     "gulp-sass": "^2.0.0",
     "gulp-svgstore": "^5.0.1",
-    "gulp-swig": "^0.7.4",
     "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.4",
     "moment": "^2.10.3",
