--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gulp-svgstore": "^5.0.2",
     "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.6",
+    "gulp-watch": "^4.3.3",
     "moment": "^2.10.3",
     "require-dir": "^0.3.0",
     "run-sequence": "^1.1.1",
