--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gulp-baseimg": "^0.2.1",
     "gulp-buffer": "0.0.2",
     "gulp-changed": "^1.3.0",
+    "gulp-file": "^0.2.0",
     "gulp-gh-pages": "^0.5.3",
     "gulp-imagemin": "^2.3.0",
     "gulp-minify-css": "^1.2.1",
