--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "jquery-bridget": "^2.0.0",
     "jquery-placeholder": "^2.3.1",
     "normalize.css": "^3.0.3",
+    "raf": "^3.1.0",
     "svg4everybody": "2.0.1"
   },
   "devDependencies": {
