--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gulp-watch": "^4.3.5",
     "moment": "^2.11.1",
     "require-dir": "^0.3.0",
+    "require-globify": "^1.3.0",
     "run-sequence": "^1.1.5",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.7.0"
@@ -37,5 +38,8 @@
   "scripts": {
     "gulp": "gulp",
     "deploy": "gulp deploy"
+  },
+  "browserify": {
+    "transform": ["require-globify"]
   }
 }
