--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gulp-plumber": "^1.0.1",
     "gulp-sass": "^2.1.1",
     "gulp-sass-glob": "0.0.8",
+    "gulp-sourcemaps": "^1.6.0",
     "gulp-svgstore": "^5.0.5",
     "gulp-uglify": "^1.5.1",
     "gulp-util": "^3.0.7",
