--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "dependencies": {
     "fastclick": "^1.0.6",
-    "normalize.css": "^3.0.3",
+    "sanitize.css": "^3.2.0",
     "svg4everybody": "2.0.1"
   },
   "devDependencies": {
