--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "dependencies": {
     "fastclick": "^1.0.6",
     "sanitize.css": "^3.2.0",
-    "svg4everybody": "2.0.1"
+    "svg4everybody": "2.0.3"
   },
   "devDependencies": {
     "browser-sync": "^2.11.1",
     "browserify": "^13.0.0",
-    "gulp": "^3.9.0",
+    "gulp": "gulpjs/gulp.git#4.0",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-baseimg": "^0.3.0",
     "gulp-buffer": "0.0.2",
@@ -21,15 +21,13 @@
     "gulp-minify-html": "^1.0.5",
     "gulp-notify": "^2.2.0",
     "gulp-nunjucks-html": "^2.0.0",
-    "gulp-plumber": "^1.0.1",
-    "gulp-sass": "^2.1.1",
+    "gulp-sass": "^2.2.0",
     "gulp-sass-glob": "0.0.8",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-svgstore": "^5.0.5",
-    "gulp-uglify": "^1.5.1",
+    "gulp-uglify": "^1.5.2",
     "gulp-util": "^3.0.7",
-    "gulp-watch": "^4.3.5",
-    "moment": "^2.11.1",
+    "moment": "^2.11.2",
     "require-dir": "^0.3.0",
     "require-globify": "^1.3.0",
     "vinyl-source-stream": "^1.1.0",
