--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "devDependencies": {
     "browser-sync": "^2.11.1",
     "browserify": "^13.0.0",
+    "del": "^2.2.0",
     "gulp": "gulpjs/gulp.git#4.0",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-baseimg": "^0.3.0",
@@ -35,6 +36,7 @@
   },
   "scripts": {
     "gulp": "gulp",
+    "build": "gulp build",
     "deploy": "gulp deploy"
   },
   "browserify": {
