--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
   },
   "scripts": {
     "gulp": "gulp",
-    "build": "gulp build",
-    "deploy": "gulp deploy"
+    "deploy": "gulp deploy",
+    "build": "gulp build"
   },
   "browserify": {
     "transform": [
