--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "gulp": "gulpjs/gulp.git#4.0",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-baseimg": "^0.3.0",
-    "gulp-buffer": "0.0.2",
     "gulp-changed": "^1.3.0",
     "gulp-file": "^0.2.0",
     "gulp-gh-pages": "^0.5.4",
@@ -31,6 +30,7 @@
     "moment": "^2.11.2",
     "require-dir": "^0.3.0",
     "require-globify": "^1.3.0",
+    "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.7.0"
   },
