--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "gulp-file": "^0.2.0",
     "gulp-gh-pages": "^0.5.4",
     "gulp-imagemin": "^2.4.0",
+    "gulp-jshint": "^2.0.0",
+    "gulp-lintspaces": "^0.4.1",
     "gulp-minify-css": "^1.2.3",
     "gulp-minify-html": "^1.0.5",
     "gulp-notify": "^2.2.0",
     "gulp-nunjucks-html": "^2.0.0",
     "gulp-sass": "^2.2.0",
     "gulp-sass-glob": "0.0.8",
+    "gulp-sass-lint": "^1.1.1",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-svgstore": "^5.0.5",
     "gulp-uglify": "^1.5.2",
@@ -37,6 +40,7 @@
   "scripts": {
     "gulp": "gulp",
     "deploy": "gulp deploy",
-    "build": "gulp build"
+    "build": "gulp build",
+    "lint": "gulp lint"
   }
 }
