--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gulp-sass": "^2.2.0",
     "gulp-sass-glob": "0.0.8",
     "gulp-sass-lint": "^1.1.1",
+    "gulp-savefile": "^0.1.1",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-svgstore": "^5.0.5",
     "gulp-uglify": "^1.5.2",
