--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "browser-sync": "^2.11.1",
     "browserify": "^13.0.0",
     "del": "^2.2.0",
+    "front-matter": "^2.0.6",
     "gulp": "gulpjs/gulp.git#4.0",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-baseimg": "^0.3.0",
     "gulp-changed": "^1.3.0",
+    "gulp-data": "^1.2.1",
     "gulp-file": "^0.2.0",
     "gulp-gh-pages": "^0.5.4",
     "gulp-imagemin": "^2.4.0",
