--- a/package.json
+++ b/package.json
@@ -15,14 +15,14 @@
     "gulp-autoprefixer": "^3.1.0",
     "gulp-baseimg": "^0.3.0",
     "gulp-changed": "^1.3.0",
+    "gulp-cssnano": "^2.1.1",
     "gulp-data": "^1.2.1",
     "gulp-file": "^0.2.0",
     "gulp-gh-pages": "^0.5.4",
+    "gulp-htmlmin": "^1.3.0",
     "gulp-imagemin": "^2.4.0",
     "gulp-jshint": "^2.0.0",
     "gulp-lintspaces": "^0.4.1",
-    "gulp-minify-css": "^1.2.3",
-    "gulp-minify-html": "^1.0.5",
     "gulp-notify": "^2.2.0",
     "gulp-nunjucks-html": "^2.0.0",
     "gulp-sass": "^2.2.0",
