--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gulp-lintspaces": "^0.4.1",
     "gulp-notify": "^2.2.0",
     "gulp-nunjucks-html": "^2.0.0",
+    "gulp-postcss": "^6.1.0",
     "gulp-sass": "^2.2.0",
     "gulp-sass-glob": "1.0.4",
     "gulp-sass-lint": "^1.1.1",
