--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "gulp-svgstore": "^5.0.5",
     "gulp-uglify": "^1.5.3",
     "gulp-util": "^3.0.7",
+    "jshint": "^2.9.2",
     "moment": "^2.11.2",
     "require-dir": "^0.3.0",
     "require-globify": "^1.3.0",
