--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "svg4everybody": "2.0.3"
   },
   "devDependencies": {
+    "autoprefixer": "^6.3.6",
     "browser-sync": "^2.11.1",
     "browserify": "^13.0.0",
     "del": "^2.2.0",
@@ -14,7 +15,6 @@
     "gulp": "gulpjs/gulp.git#4.0",
     "gulp-baseimg": "^0.3.0",
     "gulp-changed": "^1.3.0",
-    "gulp-cssnano": "^2.1.1",
     "gulp-data": "^1.2.1",
     "gulp-file": "^0.2.0",
     "gulp-gh-pages": "^0.5.4",
