--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gulp": "gulpjs/gulp.git#4.0",
     "gulp-baseimg": "^0.3.0",
     "gulp-changed": "^1.3.0",
+    "gulp-clean-css": "^2.0.7",
     "gulp-data": "^1.2.1",
     "gulp-file": "^0.3.0",
     "gulp-gh-pages": "^0.5.4",
