generate non minified css

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gulp-baseimg": "^0.3.0",
     "gulp-changed": "^1.3.0",
     "gulp-clean-css": "^2.0.7",
+    "gulp-clone": "^1.0.0",
     "gulp-data": "^1.2.1",
     "gulp-file": "^0.3.0",
     "gulp-gh-pages": "^0.5.4",
@@ -26,6 +27,7 @@
     "gulp-notify": "^2.2.0",
     "gulp-nunjucks-html": "^2.0.0",
     "gulp-postcss": "^6.1.0",
+    "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.2.0",
     "gulp-sass-glob": "1.0.6",
     "gulp-sass-lint": "^1.1.1",
