--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "gulp-jshint": "^2.0.0",
     "gulp-lintspaces": "^0.4.1",
     "gulp-notify": "^2.2.0",
-    "gulp-nunjucks-html": "^2.0.0",
+    "gulp-nunjucks-render": "^2.0.0",
     "gulp-postcss": "^6.1.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.2.0",
