--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "dependencies": {
     "sanitize.css": "^4.1.0",
-    "svg4everybody": "2.1.0"
+    "svgxuse": "^1.1.20"
   },
   "devDependencies": {
     "autoprefixer": "^6.3.6",
