--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "static",
   "version": "0.1.0",
   "dependencies": {
-    "sanitize.css": "^4.1.0",
+    "normalize.css": "^4.2.0",
     "svgxuse": "^1.1.20"
   },
   "devDependencies": {
