--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "static",
+  "name": "static-wp",
   "version": "0.1.0",
   "dependencies": {
     "normalize.css": "^4.2.0",
@@ -10,16 +10,11 @@
     "browser-sync": "^2.13.0",
     "browserify": "^13.0.1",
     "del": "^2.2.1",
-    "front-matter": "^2.1.0",
     "gulp": "gulpjs/gulp.git#4.0",
     "gulp-baseimg": "^0.3.0",
     "gulp-changed": "^1.3.0",
     "gulp-clean-css": "^2.0.10",
     "gulp-clone": "^1.0.0",
-    "gulp-data": "^1.2.1",
-    "gulp-file": "^0.3.0",
-    "gulp-gh-pages": "^0.5.4",
-    "gulp-htmlmin": "^2.0.0",
     "gulp-imagemin": "^3.0.1",
     "gulp-jshint": "^2.0.1",
     "gulp-lintspaces": "^0.4.1",
@@ -44,7 +39,6 @@
   },
   "scripts": {
     "gulp": "gulp",
-    "deploy": "gulp deploy",
     "build": "gulp build",
     "lint": "gulp lint",
     "clean": "gulp clean"
