--- a/package.json
+++ b/package.json
@@ -2,27 +2,27 @@
   "name": "static-wp",
   "version": "0.1.0",
   "dependencies": {
-    "normalize.css": "^4.2.0",
+    "normalize.css": "^7.0.0",
     "svgxuse": "^1.1.20"
   },
   "devDependencies": {
-    "autoprefixer": "^6.3.6",
+    "autoprefixer": "^7.1.1",
     "browser-sync": "^2.13.0",
-    "browserify": "^13.0.1",
+    "browserify": "^14.4.0",
     "del": "^2.2.1",
     "gulp": "gulpjs/gulp.git#4.0",
-    "gulp-baseimg": "^0.3.0",
-    "gulp-changed": "^1.3.0",
+    "gulp-baseimg": "^0.4.0",
+    "gulp-changed": "^3.1.0",
     "gulp-imagemin": "^3.0.1",
     "gulp-jshint": "^2.0.1",
-    "gulp-lintspaces": "^0.4.1",
-    "gulp-notify": "^2.2.0",
-    "gulp-postcss": "^6.1.1",
-    "gulp-sass": "^2.3.2",
-    "gulp-sass-glob": "1.0.6",
+    "gulp-lintspaces": "^0.5.0",
+    "gulp-notify": "^3.0.0",
+    "gulp-postcss": "^7.0.0",
+    "gulp-sass": "^3.1.0",
+    "gulp-sass-glob": "^1.0.8",
     "gulp-sass-lint": "^1.2.0",
     "gulp-savefile": "^0.1.1",
-    "gulp-sourcemaps": "^1.6.0",
+    "gulp-sourcemaps": "^2.6.0",
     "gulp-svgstore": "^6.0.0",
     "gulp-util": "^3.0.7",
     "jshint": "^2.9.2",
