--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "browser-sync": "^2.23.5",
     "browserify": "^15.1.0",
     "del": "^3.0.0",
-    "gulp": "gulpjs/gulp.git#4.0",
+    "gulp": "gulpjs/gulp#6d71a65",
     "gulp-baseimg": "^0.4.0",
     "gulp-changed": "^3.2.0",
     "gulp-imagemin": "^4.1.0",
